<resources>
    <string name="app_name">Kondicioner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kondecioner</string>
    <string name="nav_header_subtitle">version 1.13.13</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Share_playmarket">https://play.google.com/store</string>

    <string name="menu_home">This room</string>
    <string name="menu_rooms">Rooms</string>
    <string name="menu_slideshow">Sms</string>
    <string name="menu_addroom">Add room</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Room 1</string>
    <string name="tab_text_2">Room 2</string>
    <string name="tab_text_3">Room 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
