<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/roomm"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/rooms"
            android:title="@string/menu_rooms" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow"
            android:visible="false" />
        <item
            android:id="@+id/nav_addroom"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_addroom" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send"
                android:visible="false" />
        </menu>
    </item>

</menu>
